crates/analyzer/tests/snapshots/errors__call_send_value_with_wrong_type2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `bool` can not be used as an argument to `send_value`
  ┌─ [snippet]:3:26
  │
3 │   send_value(address(0), true)
  │                          ^^^^ wrong type
  │
  = Note: `send_value` expects an `u256` as second argument


